Enable tests in CI