@@ -1,56 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.pdtextensions</groupId>
-        <artifactId>parent</artifactId>
-        <version>0.21.0-SNAPSHOT</version>
-    </parent>
-    <artifactId>org.pdtextensions.semanticanalysis.tests</artifactId>
-    <packaging>eclipse-test-plugin</packaging>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-surefire-plugin</artifactId>
-                <version>${tycho-version}</version>
-                <configuration>
-                    <useUIHarness>false</useUIHarness>
-                    <useUIThread>false</useUIThread>
-                    <includes>
-                        <include>org/pdtextensions/semanticanalysis/tests/TestRunner.java</include>
-                    </includes>
-                </configuration>
-                
-            </plugin>
-        </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>osx</id>
-            <activation>
-                <property>
-                    <name>java.vendor.url</name>
-                    <value>http://www.apple.com/</value>
-                </property>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.eclipse.tycho</groupId>
-                            <artifactId>tycho-surefire-plugin</artifactId>
-                            <version>${tycho-version}</version>
-                            <configuration>
-                                <argLine>-XstartOnFirstThread</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-    </profiles>
+	<parent>
+		<groupId>org.pdtextensions</groupId>
+		<artifactId>parent</artifactId>
+		<version>0.21.0-SNAPSHOT</version>
+	</parent>
+	<properties>
+		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
+	</properties>
+	<artifactId>org.pdtextensions.semanticanalysis.tests</artifactId>
+	<packaging>eclipse-test-plugin</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<useUIHarness>false</useUIHarness>
+					<useUIThread>false</useUIThread>
+					<includes>
+						<include>org/pdtextensions/semanticanalysis/tests/TestRunner.java</include>
+					</includes>
+					<argLine>${test.vmargs}</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<profiles>
+		<profile>
+			<id>osx</id>
+			<activation>
+				<property>
+					<name>java.vendor.url</name>
+					<value>http://www.apple.com/</value>
+				</property>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.eclipse.tycho</groupId>
+							<artifactId>tycho-surefire-plugin</artifactId>
+							<version>${tycho-version}</version>
+							<configuration>
+								<argLine>-XstartOnFirstThread</argLine>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
 </project>
